# workshop

./: .editorconfig  .gitattributes  .gitignore  COPYING  README
autotools/macros/: ax_enable_doxygen_docs.m4  ax_firebird.m4  ax_lib_expat.m4  ax_lib_mysql.m4  ax_lib_oracle_oci.m4  ax_lib_postgresql.m4  ax_lib_sqlite3.m4  ax_lib_xerces.m4  ax_mysql.m4  ax_oracle_oci.m4  ax_postgresql.m4  ax_sqlite3.m4  ax_xerces.m4
benchmarking/tiling/: README
benchmarking/tiling/gdal/: Makefile  gdal_image_tiles_test.cpp  results.txt  run.sh
benchmarking/tiling/gil/io2/: Makefile  io2_tiff_image_tiles_test.cpp  io2_wic_image_tiles_test.cpp
benchmarking/tiling/gil/io_new/: io_new_read_lots_jpeg_images.cpp
cmake/: CMakeLists.txt  README  cmake_build_type.h.in  cmake_ndebug_test.cpp
cmake/modules/: FindGDAL.cmake  FindGeoTIFF.cmake  FindPROJ4.cmake  FindPostgreSQL.cmake  FindSpatialIndex.cmake
endian/: endian.hpp  endian_example.cpp
endian/msvc80/: endian.sln  endian.vcproj  endian.vsprops
gdal/: ogr_collinear_simplify.cpp
postgresql/: .gitignore  CMakeLists.txt  README  configure.bat  tinypq.hpp
postgresql/numeric/: CMakeLists.txt  postgresql_binary_numeric.cpp
python/: CMakeLists.txt  README  build.bat  configure.bat  faq_incomplete_input.cpp  serial_subinterpreters.cpp  simple.cpp  tkinter.cpp
python/emb/: CMakeLists.txt  emb.cpp
scripts/: create_postgis_template.sh  gdalbb.py
scripts/colorbb/: colorbb  colorbb.pl
sid2jp2/branches/beta-0.6-branch/: README.txt
sid2jp2/branches/beta-0.6-branch/src/: aboutdlg.cpp  error.h  filesystem.h  main.cpp  resource.h  sid2jp2.rc  stdafx.h  thread.h
sid2jp2/msvc80/: sid2jp2_common.vsprops
sid2jp2/src/: progress.h
sid2jp2/tags/1.0-rc1/msvc80/: sid2jp2.sln  sid2jp2.vcproj
sid2jp2/tags/1.0-rc1/src/: aboutdlg.cpp  filesystem.cpp  maindlg.cpp  maindlg.h  mrsidimageinfo.cpp  sid2jp2.rc
sid2jp2/tags/beta-0.5/msvc80/: sid2jp2.vcproj
sid2jp2/tags/beta-0.5/src/: aboutdlg.cpp  aboutdlg.h  (+6 more)
sid2jp2/tags/beta-0.6/: README.txt
sid2jp2/trunk/: README.txt
sid2jp2/trunk/msvc80/: sid2jp2.vcproj  sid2jp2_common.vsprops
sid2jp2/trunk/src/: aboutdlg.cpp  dataset.h  error.h  filesystem.cpp  filesystem.h  main.cpp  maindlg.cpp  maindlg.h  mrsidimageinfo.cpp  mrsidimageinfo.h  progress.cpp  resource.h  sid2jp2.rc  stdafx.h  thread.cpp  thread.h  translator.cpp  translator.h
soci/: soci.vsprops
soci/examples/: example1.cpp  example1.vcproj  example2.cpp  example2.vcproj  examples.sln
trunk/autotools/macros/: ax_firebird.m4  ax_mysql.m4  ax_oracle_oci.m4  ax_postgresql.m4  ax_prog_doxygen.m4  ax_sqlite3.m4
trunk/sid2jp2/src/: maindlg.cpp
trunk/wince/: timeval.h
trunk/wkt/: README  error_handling_test.cpp  ogc_wkt_validator.hpp
wkt/: Makefile  README  error_handling_test.cpp  ogc_wkt_grammar.hpp  ogc_wkt_grammar_test.cpp  ogc_wkt_validator.hpp  ogc_wkt_validator_test.cpp
wkt/trunk/: error_handling_test.cpp  ogc_wkt_grammar_test.cpp  ogc_wkt_validator_test.cpp
yabinrw/: yatbinrw.hpp
yabinrw/msvc80/: yabinrw.sln  yabinrw.vcproj  yabinrw.vsprops
yatbinrw/: yatbinrw.hpp  yatbinrw_example.cpp
yatbinrw/msvc80/: yatbinrw.sln  yatbinrw.vcproj  yatbinrw.vsprops
(+34 files in other folders)
